# agenttrace

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/src/agent_trace/: __init__.py  main.py
backend/src/agent_trace/application/: __init__.py
backend/src/agent_trace/application/dto/: __init__.py  schemas.py
backend/src/agent_trace/application/services/: __init__.py  ingest_service.py  run_service.py
backend/src/agent_trace/domain/: __init__.py
backend/src/agent_trace/domain/entities/: __init__.py  agent_run.py  span_event.py  trace_node.py
backend/src/agent_trace/domain/interfaces/: __init__.py  clock.py  exporters.py  repositories.py
backend/src/agent_trace/domain/services/: tree_builder.py
backend/src/agent_trace/domain/value_objects/: __init__.py  run_status.py  span_type.py
backend/src/agent_trace/infrastructure/config/: settings.py
backend/src/agent_trace/infrastructure/database/: __init__.py  connection.py  models.py
backend/src/agent_trace/infrastructure/database/repositories/: __init__.py  run_repository.py
backend/src/agent_trace/presentation/: __init__.py  dependencies.py
backend/src/agent_trace/presentation/routers/: __init__.py  ingest.py  runs.py
