# Agent Trace - Monorepo Configuration
# This file is for workspace-level tooling and development setup

[project]
name = "agent-trace-workspace"
version = "0.1.0"
description = "AI Agent Step Debugger - Workspace"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true